crates/velme-syntax/tests/snapshots/parser__golden_reject@type_decl_no_fields.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/type_decl_no_fields.velme
---
[
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `type` here — I was looking for an indented line.",
    "severity": "error",
    "span": [
      65,
      65
    ]
  }
]
