crates/velme-syntax/tests/snapshots/parser__golden_reject@unexpected_indent.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/unexpected_indent.velme
---
[
  {
    "code": "VL0102",
    "help": "line it up with the line above, or end the line above with `:` to start a block",
    "message": "This line is indented more than I expected.",
    "severity": "error",
    "span": [
      97,
      97
    ]
  },
  {
    "code": "VL0101",
    "help": null,
    "message": "I didn't expect `goal` here — I was looking for a name.",
    "severity": "error",
    "span": [
      112,
      116
    ]
  }
]
